--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,9 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <jdk.min.version>1.8</jdk.min.version>
   </properties>
 
   <dependencies>
@@ -24,7 +27,7 @@
     <dependency>
       <groupId>org.jboss.set</groupId>
       <artifactId>aphrodite</artifactId>
-      <version>0.1.1</version>
+      <version>0.3.1-SNAPSHOT</version>
     </dependency>
   </dependencies>
 </project>
