Updated to reflect Stream capabilities.

--- a/aphrodite.properties.json.example
+++ b/aphrodite.properties.json.example
@@ -24,5 +24,11 @@
             "password": "pass",
             "type": "GITHUB"
         }
+    ],
+    "streamConfigs": [
+        {
+            "url": "https://raw.githubusercontent.com/jboss-set/jboss-streams/master/streams.json",
+            "type": "JSON"
+        }
     ]
 }
